Perbaikan Css dan JS index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator</title>
-    <link rel="stylesheet" href="../CSS/Kalkulator.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calculator">
@@ -29,6 +29,6 @@
             <button class="btn clear" onclick="clearDisplay()">Reset</button>
         </div>
     </div>
-    <script src="../JS/Kalkulator.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
